Fix search results pagination  overflow

--- a/app/assets/stylesheets/ursus/_sort-pagination.scss
+++ b/app/assets/stylesheets/ursus/_sort-pagination.scss
@@ -33,6 +33,7 @@ a.page-link {
 
 ul.pagination {
   border-radius: 0px;
+  flex-wrap: wrap;
 }
 
 a.page-link {
